fix(frontend): Fixed background is overflow in mobile devices

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -125,11 +125,11 @@
 /* for the hint page ._. */
 html,
 body {
-  min-height: 100vh;
+  min-height: 100svh;
 }
 
 #root {
-  min-height: 100vh;
+  min-height: 100svh;
 }
 
 body {
